fix: remove container class from post main to fix overflow layout

--- a/css/style.css
+++ b/css/style.css
@@ -335,6 +335,8 @@ main {
   padding-left: 0;
   padding-right: 0;
   max-width: 100%;
+  min-height: calc(100vh - 160px);
+  overflow-x: hidden;
 }
 
 #post-content {
